# utility-bill-tracker

./: .black  .black.toml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml  req.txt
UtilityBillTracker/: asgi.py  settings.py  urls.py  wsgi.py
bills/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
bills/migrations/: 0001_initial.py  0002_billsubcategory_remove_bill_bill_category_and_more.py  0002_initial.py  0002_remove_billsubcategory_slug.py  0003_alter_billtype_slug.py  0003_building_description.py  0003_remove_billcategory_building_bill_user_and_more.py  0004_alter_bill_created_at.py  0004_alter_bill_user.py  0004_rename_name_billcategory_category_name_and_more.py  0005_alter_bill_created_at.py  0005_alter_bill_user.py  0005_rename_price_bill_tariff_remove_bill_measure_unit_and_more.py  0006_alter_bill_month_paid.py  0006_alter_billcategory_color.py  0007_alter_bill_created_at.py  0007_remove_bill_user.py  0008_alter_bill_created_at_alter_bill_tariff.py  0008_bill_user_alter_billsubcategory_bill_category.py  0009_rename_sub_category_name_billsubcategory_name.py  0010_rename_name_billsubcategory_sub_category_name.py  0011_bill_bill_sum_alter_bill_created_at_and_more.py  0012_billsubcategory_tariff.py  0013_remove_building_bill_sub_category_and_more.py  0014_alter_bill_building_remove_billcategory_is_selected_and_more.py  (+1 more)
buildings/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
charts/: urls.py  views.py
templates/: base.html
user/: forms.py  models.py  urls.py  views.py
(+31 files in other folders)
