[tool.poetry]
name = "utility-bill-tracker"
version = "0.1.0"
description = ""
authors = ["Berestianyi Ivan <berestvania@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
django = "5.0.3"
django-bootstrap5 = "23.4"
pillow = "10.3.0"
psycopg2-binary = "2.9.9"
sqlparse = "0.4.4"
typing-extensions = "4.10.0"
django-colorfield = "^0.11.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
